2009-10-02  Juanma Barranquero  <lekktu@gmail.com>

	* allout.el (allout-init, allout-back-to-current-heading)
	(allout-beginning-of-current-entry, allout-ascend-to-depth)
	(allout-ascend, allout-up-current-level, allout-end-of-level)
	(allout-previous-visible-heading, allout-forward-current-level)
	(allout-backward-current-level, allout-show-children):
	* apropos.el (apropos-describe-plist):
	* bookmark.el (bookmark-maybe-historicize-string, bookmark-bmenu-list):
	* comint.el (comint-strip-ctrl-m, comint-goto-process-mark):
	* completion.el (add-completion, add-permanent-completion):
	* descr-text.el (describe-text-category, describe-char):
	* desktop.el (desktop-lazy-abort):
	* dired-x.el (dired-omit-expunge, dired-x-bind-find-file):
	* dired.el (dired-build-subdir-alist):
	* ediff.el (ediff-version):
	* elide-head.el (elide-head, elide-head-show):
	* emerge.el (emerge-version):
	* env.el (getenv):
	* face-remap.el (variable-pitch-mode):
	* faces.el (describe-face):
	* ffap.el (ffap-next-url, find-file-at-point, ffap-at-mouse)
	(dired-at-point):
	* files.el (find-file-existing, auto-save-mode):
	* font-lock.el (font-lock-fontify-buffer):
	* help-fns.el (describe-function, describe-variable)
	(describe-syntax, describe-categories):
	* help.el (view-lossage, describe-bindings, describe-key)
	(describe-mode):
	* hexl.el (hexl-current-address):
	* hi-lock.el (hi-lock-mode, hi-lock-find-patterns):
	* info.el (Info-goto-emacs-key-command-node):
	* log-edit.el (log-edit-insert-cvs-template)
	(log-edit-insert-cvs-rcstemplate):
	* menu-bar.el (menu-bar-mode):
	* mouse.el (mouse-appearance-menu):
	* newcomment.el (comment-indent-new-line):
	* pgg.el (pgg-save-coding-system, pgg-encrypt-region)
	(pgg-encrypt-symmetric-region, pgg-encrypt-symmetric)
	(pgg-encrypt, pgg-decrypt-region, pgg-decrypt, )
	(pgg-sign-region, pgg-sign, pgg-verify-region, pgg-verify):
	* recentf.el (recentf-mode):
	* savehist.el (savehist-mode, savehist-save):
	* shadowfile.el (shadow-copy-files):